--- a/style.css
+++ b/style.css
@@ -66,8 +66,9 @@ div.frontCard div p {
 }
 
 
-div.frontCard div p:nth-child(2) {
+div.clearfix p:nth-child(2), div.clearfix p:nth-child(3), div.clearfix p:nth-child(4) {
     float: right;
+    transition: .3s;
 }
 
 div.clearfix::after {
@@ -75,6 +76,7 @@ content: "";
 clear: both;
 display: table;
 }
+
 
 div.backCard {
     top: 23px;
@@ -91,7 +93,7 @@ div.backCard p {
     letter-spacing: 3px;
 }
 
-div.cardInfo {
+.cardInfo {
     display: flex;
     flex-direction: column;
     height: 70%;
@@ -110,23 +112,31 @@ div input {
     border: 1px solid rgb(211, 211, 211);
     padding: 15px;
     font-size: 18px;
+    transition: .3s;
 }
 
 div input::placeholder {
     opacity: 0.4;
 }
+ input:focus {
+    outline: none;
+    border-image: linear-gradient(to right, hsl(249, 99%, 64%) , hsl(278, 94%, 30%)) 1;
+    border-radius: 15px;
+    
+}
 
 div  p {
     padding: 10px 0;
     letter-spacing: 2px;
-    color: hsl(278, 68%, 20%);
+    color: hsl(278, 68%, 30%);
 }
 
 
 p.wrongFormula {
     display: block;
     opacity: 0;
-    color: red;
+    color: hsl(0, 100%, 66%);
+    padding: 2px;
 }
 
 div.cardInfo div:nth-child(3) p {
@@ -157,6 +167,44 @@ button {
     background-color: hsl(278, 68%, 11%);
     color: white;
     font-size: 18px;
+}
+
+
+
+section.completeState {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    padding-top: 20px;
+}
+section.completeState.noActive {
+    display: none;
+}
+
+.noActive {
+    display: none;
+}
+
+section.completeState img {
+    object-fit: contain;
+    width: 80px;
+}
+
+div.smallWrapper {
+    text-align: center;
+}
+
+h1 {
+    font-size: 24px;
+    letter-spacing: 4px;
+}
+
+p.textUnderH1 {
+    font-size: 18px;
+    letter-spacing: 0;
+    color: rgb(144, 144, 144);
 }
 
 .attribution {
