--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ div.backCard p {
 .startState , .completeState {
     display: flex;
     flex-direction: column;
-    height: 70%;
+    height: 100%;
+    width: 100%;
     justify-content: space-evenly;
     padding: 30px;
     padding-top: 70px;
@@ -256,7 +257,7 @@ div.frontCard div p:nth-child(2) {
 
 div.backCard {
     top: 42vh;
-    left: 4vw;
+    left: 2vw;
 }
 
 div.backCard p {
@@ -271,7 +272,7 @@ section.startState {
     align-items: center;
 }
 
-div.cardWrapper {
+div.cardWrapper{
     width: 400px
 }
 
@@ -283,11 +284,23 @@ button {
 
 @media (min-width: 1250px) {
     div.frontCard {
-    left: 10vw; 
+    left: 7vw; 
 }
 
 div.backCard {
-    left: 15vw;
+    left: 12vw;
+}
+
+}
+
+
+@media (min-width: 1600px) {
+    div.frontCard {
+    left: 14vw; 
+}
+
+div.backCard {
+    left: 20vw;
 }
 
 }
